	application environment; this is disabled by default and can be
	enabled with the 'autoload_known' flag. Add function filter/3, fold/3,
	foreach/2 and map/2 which are equivalent to their counterpart in
	'lists'.

	* testsuite/etest.in: Don't forgot to add $top_builddir/ebin to the
	code path or the testsuite will check the installed exmpp.

2008-07-07  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/core/exmpp_internals.erl (gen_controlling_process): Fix API: the
	second argument (Pid) was missing!

	* src/core/exmpp_stream.erl, src/core/exmpp_compress.erl: Style.

	* src/core/exmpp_xml.erl: Accept atoms and integers as attribute
	value. They're converted to binary internally and it's not possible to
	get them back in their original type.

	* src/core/exmpp_presence.erl: Use exmpp_xml:get_cdata_as_list/1
	instead of binary_to_list/1.

	* src/core/exmpp_xmlstream.erl: A function was left behind: it now
	uses exceptions too.

	* ebin/exmpp.app.in, doc/Makefile.am: exmpp_callbacks was removed.

	* Makefile.am, testsuite/Makefile.am, testsuite/etest.in,
	testsuite/eunit_tty.erl: New testsuite based on EUnit.

	* testsuite/jid.erl: First test; more to come. Old tests are still
	there for this.

	* testsuite/Emakefile.in, testsuite/test.sh, testsuite/testsuite.erl:
	Remove old tools.

	* configure.ac: Check for EUnit and escript(1).

	* configure.ac, Makefile.am, doc/Makefile.am: Rename
	BUILD_DOCUMENTATION to ENABLE_DOCUMENTATION for consistency's sake.

	* src/core/exmpp_internals.erl, src/core/exmpp_xml.erl:
	lists:keystore/4 appeared only in R12B. Use a replacement function.

	* src/core/exmpp_utils.erl, src/Makefile.am, src/Emakefile.in,
	ebin/Makefile.am, ebin/exmpp.app.in, doc/Makefile.am: Add a new module
	to receive misc. functions.

	* src/core/exmpp_internals.erl, src/server/exmpp_server_sasl.erl,
	src/server/exmpp_server_privacy.erl, src/core/exmpp_stream.erl,
	src/core/exmpp_xml.erl, src/core/exmpp_stanza.erl,