@@ -12,6 +12,9 @@
 	* testsuite/etest.in: Don't forgot to add $top_builddir/ebin to the
 	code path or the testsuite will check the installed exmpp.
 
+	* testsuite/eunit_tty.erl: Use the new indent facility of exmpp_xml
+	with the JUnit XML report.
+
 2008-07-07  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>
 
 	* src/core/exmpp_internals.erl (gen_controlling_process): Fix API: the
